[gd_scene load_steps=2 format=3 uid="uid://1s2vrm0ngi5v"]

[ext_resource type="Script" path="res://scripts/death.gd" id="1_qgdqd"]

[node name="death" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qgdqd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 2008.0
offset_bottom = 1090.0
color = Color(0, 0, 0, 0.341176)

[node name="g_label" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 683.0
offset_top = 290.0
offset_right = 898.0
offset_bottom = 362.0

[node name="restart" type="Button" parent="."]
layout_mode = 0
offset_left = 700.0
offset_top = 370.0
offset_right = 875.0
offset_bottom = 405.0

[node name="quit" type="Button" parent="."]
layout_mode = 0
offset_left = 701.0
offset_top = 421.0
offset_right = 876.0
offset_bottom = 456.0

[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
